tests/Houtamelo.Spire.Analyzers.Tests/SPIRE002/cases/Detect_FieldlessClass.cs
//@ should_fail
// Ensure that SPIRE002 IS triggered when [EnforceInitialization] is on a class with no fields.
[EnforceInitialization] //~ ERROR
public class EmptyEnforceInitializationClass { }
